--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,10 @@
 			<artifactId>weixin-java-mp</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+		</dependency>
 	</dependencies>
 </project>
