--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.2.RELEASE</version>
-		<weixin.mp.version>1.3.2</weixin.mp.version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -23,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<weixin.mp.version>2.4.0</weixin.mp.version>
 		<docker.image.prefix>springio</docker.image.prefix>
 	</properties>
 
@@ -44,7 +44,7 @@
 
 		<!-- WeiXin -->
 		<dependency>
-			<groupId>me.chanjar</groupId>
+			<groupId>com.github.binarywang</groupId>
 			<artifactId>weixin-java-mp</artifactId>
 			<version>${weixin.mp.version}</version>
 		</dependency>
