--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.data.mongodb.host=172.18.0.248
-spring.data.mongodb.username=hsep
+spring.data.mongodb.username=radar
 spring.data.mongodb.password=pl,okm123
-spring.data.mongodb.database=hsep
+spring.data.mongodb.database=radar_wxapp
 
 client.index=http://hsep.cloume.com
 client.version=beta-1.0.8
-
-service.baseUrl=http://hsep.cloume.com/service-wx
+wxapp.baseUrl=http://hsep.cloume.com/service-wx
 
 wx.appID=wx4ef15e363d6ad0d2
 wx.appSecret=1eafbeba11ac1f102abba71bf16ba1ff
