--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.data.mongodb.host=172.18.0.248
-spring.data.mongodb.username=radar
-spring.data.mongodb.password=pl,okm123
+#spring.data.mongodb.host=172.18.0.248
+#spring.data.mongodb.username=radar
+#spring.data.mongodb.password=pl,okm123
 spring.data.mongodb.database=radar_wxapp
 
-client.index=http://hsep.cloume.com
+client.index=http://radar.tunnel.qydev.com
 client.version=beta-1.0.8
-wxapp.baseUrl=http://hsep.cloume.com/service-wx
+wxapp.baseUrl=http://radar.tunnel.qydev.com/wxapp
 
-wx.appID=wx4ef15e363d6ad0d2
-wx.appSecret=1eafbeba11ac1f102abba71bf16ba1ff
-wx.token=hsepwxclient20151217edward
+wx.appID=wx2460a0545c9ce7e4
+wx.appSecret=d4624c36b6795d1d99dcf0547af5443d
+wx.token=radar20161216
 wx.aesKey=Rx5t1ERjsZPyDcSNWB8kex4M3n49QCv9WOnVJzLskuN
 wx.mediaUrlTemplate=https://api.weixin.qq.com/cgi-bin/media/get?access_token=%s&media_id=%s
