配合前端完成jssdk签名; 为通过oauth2修改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 #spring.data.mongodb.password=pl,okm123
 spring.data.mongodb.database=radar_wxapp
 
-client.index=http://radar.tunnel.qydev.com
+client.index=http://radarwx.tunnel.qydev.com/question.html
 client.version=beta-1.0.8
-wxapp.baseUrl=http://radar.tunnel.qydev.com/wxapp
+wxapp.baseUrl=http://radar.tunnel.qydev.com
 
 wx.appID=wx2460a0545c9ce7e4
 wx.appSecret=d4624c36b6795d1d99dcf0547af5443d
