--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.data.mongodb.host=172.18.0.248
+spring.data.mongodb.host=172.18.0.248
 #spring.data.mongodb.username=radar
 #spring.data.mongodb.password=pl,okm123
 spring.data.mongodb.database=radar_wxapp
